# b2-hm6

./: README.md  pyproject.toml
data-base/: create_db.py  dz_6.db  fill_db.py
data-base/sql/: 1.sql  10.sql  11.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql  create_db.sql
